@@ -1,5 +1,10 @@
 2003-11-18  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-toc-pager.c:
+	- Only read files ending in .omf
+
+2003-11-18  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-db-pager.c:
 	- Pass $mediaobject_path as a param
 
